2001-11-12  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (FindVariable*): Another regression in 229.

2001-11-11  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp:
	* src/expr.cpp:
	* src/modifier.cpp: Fix some more random regressions caused by
	patch 229.

2001-11-11  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (NeedsInitializationMethod): Fix assertion error in
	previous commit.

2001-11-10  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (CheckMethodOverride, AddInherited*): Consolidate
	all the work of CompleteSymbolTable, CheckMethodOverride, and
	CheckInheritedMethodThrows into one place, which is now called
	when building the inheritance tables. Fixes bugs 190, 1787, 1801.
	* src/error.h:
	* src/error.cpp: More error cleanups: Collapse REDUNDANT_* and
	OBSOLESCENT_ABSTRACT into REDUNDENT_MODIFIER, add
	RECOMMENDED_MODIFIER_ORDER, collapse VOLATILE_FINAL and
	FINAL_VOLATILE to VOLATILE_FINAL_FIELD, add
	MISMATCHED_IMPLICIT_METHOD, FINAL_IMPLICIT_METHOD_OVERRIDE, and
	MISMATCHED_IMPLICIT_OVERRIDDEN_EXCEPTION, and delete some unused
	errors.
	* src/modifier.cpp: Add checking (in pedantic mode) for the
	recommended ordering of modifiers.
	* src/platform.cpp: Fix a core-dump caused during my testing when
	I accidentally passed NULL as an error message parameter.
	* src/semantic.h: Update some method headers.
	* src/table.h (RemoveConflicts): Delete this method, as saving the
	method conflicts is essential for determining the merged throws
	clause mentioned in bug 2395 (although I don't have that bit
	working yet) - patch 229.

2001-11-09  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessImportQualifiedName): Detect attempts to
	import from the unnamed package.
	* src/error.h:
	* src/error.cpp (IMPORT_FROM_UNNAMED_PACKAGE): Add new error.
	(UNKNOWN_ON_DEMAND_IMPORT): Rename from
	UNKNOWN_QUALIFIED_NAME_BASE, bug 601, patch 228.

2001-11-08  Eric Blake  <ebb9@email.byu.edu>

	* src/access.h (AccessString): Add, for easier error messages.